Bug 1275596 - Ignore ended tracks when selecting new track in MediaStreamAudioSourceNode and MediaElementSourceNode. r=padenot

This is how it was meant to work when the refactor landed in Bug 1208371.
We have no test coverage of seeking apparently.

MozReview-Commit-ID: IhyGbjctO7E